@@ -1,7 +1,8 @@
-$Id: ChangeLog,v 1.26 2004/03/27 20:37:14 h_oudejans Exp $
+$Id: ChangeLog,v 1.27 2004/03/28 15:11:51 h_oudejans Exp $
 
 2004-03-28 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Fixed linux disk/cart/tape combobox problems
+	* Fixed Audio/Video combobox problems
 
 2004-03-27 Herman Oudejans <hn.oudejans@quicknet.nl>
 	* Catapult now sends update enable commands to openmsx
